2010-07-22  James Robinson  <jamesr@chromium.org>

Reviewed by Simon Fraser.

        REGRESSION: box shadows on WebGL canvas elements repainted every frame
        https://bugs.webkit.org/show_bug.cgi?id=42852

        Avoid calling HTMLCanvasElement::willDraw() every time a WebGL canvas'
        contents update.  This call is only needed in the non-compositing
        rendering path.

        Covered by fast/canvas/webgl/canvas-test.html

        * html/canvas/WebGLRenderingContext.cpp:
        (WebCore::WebGLRenderingContext::markContextChanged):
        (WebCore::WebGLRenderingContext::paintRenderingResultsToCanvas):


Canonical link: https://commits.webkit.org/54760@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63923 268f45cc-cd09-0410-ab3c-d52691b4dbfc